--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
     "dependencies": {
         "@azure/msal-browser": "^3.1.0",
         "@azure/msal-react": "^2.0.3",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@mui/icons-material": "^5.10.16",
-        "@mui/material": "^5.10.17",
         "@types/node": "^16.18.10",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
@@ -23,7 +19,6 @@
     "scripts": {
         "start": "set PORT=3006 && react-scripts start",
         "build": "react-scripts build",
-        "test:e2e": "jest",
         "eject": "react-scripts eject"
     },
     "browserslist": {
@@ -40,15 +35,6 @@
     },
     "devDependencies": {
         "@azure/msal-common": "^14.7.0",
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@types/jest": "^29.5.0",
-        "jest": "^29.5.0",
-        "jest-junit": "^16.0.0",
-        "ts-jest": "^29.1.0"
-    },
-    "jest-junit": {
-        "suiteNameTemplate": "TypeScript Sample Tests",
-        "outputDirectory": ".",
-        "outputName": "test-results.xml"
-      }
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    }
 }
